[project]
name = "sd-renoising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "safetensors>=0.7.0",
    "tqdm>=4.67.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.10.2",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
